package Biblio;

import java.time.LocalDateTime;

public class Prestamo {

    private Estudiante estudiante;
    private LocalDateTime fecha;
    private Libro libro;

    public Prestamo (Libro libro, Estudiante estudiante){

        fecha = LocalDateTime.now();
        this.estudiante = estudiante;
        this.libro = libro;

    }


    public Libro getLibro() {
        return libro;
    }

    public void setLibro(Libro libro) {
        this.libro = libro;
    }

    public Estudiante getEstudiante() {
        return estudiante;
    }

    public void setEstudiante(Estudiante estudiante) {
        this.estudiante = estudiante;
    }

    public LocalDateTime getFecha() {
        return fecha;
    }

    public void setFecha(LocalDateTime fecha) {
        this.fecha = fecha;
    }

    @Override
    public String toString() {
        return "Prestamo{" +
                "libro=" + libro +
                ", estudiante=" + estudiante +
                ", fecha=" + fecha +
                '}';
    }

}
